[package]
name = "leaderboard"
version.workspace = true
edition.workspace = true
description = "Cosmic XO leaderboard — indexes players by H160 and stores (cid, points)"
authors.workspace = true
homepage.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "leaderboard"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
